update edgeToAdd/Remove to Set